set the height of the field group controls to avoid them bleeding into the fields

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -5511,6 +5511,7 @@ span.howto {
 	box-sizing: border-box;
 	right: 0;
 	top: -28px;
+	height: 28px;
 	z-index: 3; /* section dividers use z-index: 2; position above that to avoid it taking over hover control. */
 }
 
